Mental note edit styl not generated css.

--- a/src/index.jade
+++ b/src/index.jade
@@ -18,8 +18,6 @@ html
       //.giffy(style="background-image: url(/images/yogscast.gif)")
       section.giffy(style="background-image: url(/images/7mkU7FK.gif)")
         h1 Open Web Technologies:<br> A History & Introduction
-        aside
-          h2 I must remember to mention this, and then that.
 
       section
         h2 An Open Skill Session For Engagement
@@ -37,7 +35,9 @@ html
             <br>              
             |Bill Walker @wfwalker - {Insert Summary}
         aside
-          h2 I must remember to mention this, and then thd            
+          h2 People Introductions What They Do
+            | Craig Cook is a senior front end engineer on the Brand team
+            | BIll          
 
       section
         h2 Leave Here Understanding....
@@ -45,7 +45,7 @@ html
           Open Web Stack and why these technologies are important. People will also learn about some of the technical implementations of the open web in Firefox OS and marketplace.
 
       section.giffy(style="background-image: url(/images/charlie-1.gif)")
-        h2.no-border Let's go!
+        h2 Let's go!
 
       section
         h2.no-border Let's go!
