--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -59,7 +59,7 @@ article
   width: slide_width
   height: slide_height
   position: absolute
-  background: slide_background
+  background: slide_background no-repeat
   background-position: center center
   background-size: cover
   padding: 40px
@@ -205,6 +205,9 @@ a
 .giffy h2
   color: #FFFFFF
   border-bottom: 5px solid #ffffff
+
+.giffy-fit
+  background-size: contain
 
 .no-border
   border: none !important
