More slides, adding notes.

--- a/src/index.jade
+++ b/src/index.jade
@@ -46,11 +46,89 @@ html
       section.giffy(style="background-image: url(/images/glue.gif)")
 
       section
-        h2.bullet This is a story...
+        h2.bullet This Is A Brief History
         ul
-          li About the Mozilla Manifesto
-          li ....
-          li And 
+          li Of how open standards came to be ...
+          li and 
+          li ... how the battle fought on the desktop is now being fought on our phones.
+
+      section.giffy(style="background-image: url(/images/manifesto.png)")
+
+      section
+          h2 Out Story Begins On 8/19/91
+
+      section.giffy(style="background-image: url(/images/Tim-Berners-Lee.png)")
+        strong      
+          |This project is experimental and of course comes without any warranty  
+          |whatsoever. However, it could start a revolution in information access. We are  
+          |currently using WWW for user support at CERN. We would be very interested in  
+          |comments from anyone trying WWW, and especially those making other data  
+          |available, as part of a truly world-wide web. 
+
+        aside
+          |Tim-Berners-Lee original post to usenet announcing public release of WorldWideWeb hypertext browser/editor.
+          |Even here you can see the seeds of collaboration.
+          <br>
+          | Note way before this open standards had been succesfull note tcp/ip from 1979
+          <br>
+          | Layering of open standards on existing open standards.
+
+      section
+          h2.bullet Things Moved Fast
+          ul
+            li 
+              strong 1993 
+              ul
+                li CERN agrees to allow anyone to use Web protocol and code royalty-free.
+                li NCSA release first alpha version of Marc Andreessen's "Mosaic for X"
+                li WWW (Port 80 HTTP) traffic measures 0.1% of NSF backbone traffic. 
+            li 
+              strong 1994
+              ul
+                li Marc Andreessen and colleagues leave NCSA to form "Mosaic Communications Corp" (later Netscape).
+                li World Wide Web Consortium founded. 
+            li
+              strong 1997
+              ul
+                li W3C publishes first W3C Recommendation for HTML — HTML 3.2.
+                li IE 4 Released (Bundled With Windows)
+                li Browser Wars
+
+          aside
+            |W3C founded to lead the World Wide Web to its full potential by developing protocols and 
+            |guidelines that ensure the long-term growth of the Web.             
+            <br>
+            |Note w3c does not publish strict standards but rather strong recommendations.
+            |IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
+            |at IE and dominating the market.
+
+      section
+          h2 Let's Talk About Microsoft    
+          
+      section.giffy-fit(style="background-image: url(/images/ie.gif)")
+
+      section 
+        h2 IE Goes Rogue
+        <br>
+        img(src='/images/border-box-model.png') 
+        aside
+          |IE bundles a ton of Proprietary features, ignores W3c recommendations
+
+      section.giffy(style="background-image: url(/images/yogscast.gif)")
+        h2 The Web Breaks
+        p.quote 
+          |"Microsoft is committed to implementing the Internet standards that make sense to allow our customers to build great solutions. As standards emerge, we evaluate them to see which standards might best serve our customers' needs.""
+
+        aside
+          |Someone forgot what the word standars means
+          <br>
+          |Developing cross-browser websites was incredibly painful.
+          |The promise of write once run everywhere failed. You had to code for ie and everybody else
+          |Who knows if the features you coded against would exist in the future?
+          |Supporting multiple versions of IE became even more of a pain.
+          |Not just IE vs Netscape but IE6 vs IE7 vs IE8 vs Nestscape 
+
+
 
       section
         h2 Manifesto stuff
@@ -75,10 +153,9 @@ html
           p 
 
       section
-        h2 IE
+        h2 After 
 
 
-      section.giffy(style="background-image: url(/images/manifesto.png)")
 
 
 
