--- a/src/index.jade
+++ b/src/index.jade
@@ -112,12 +112,12 @@ html
         <br>
         img(src='/images/border-box-model.png') 
         aside
-          |IE bundles a ton of Proprietary features, ignores W3c recommendations
+          |IE bundles a ton of Proprietary features, ignores W3c recommendations. 
 
       section.giffy(style="background-image: url(/images/yogscast.gif)")
         h2 The Web Breaks
         p.quote 
-          |"Microsoft is committed to implementing the Internet standards that make sense to allow our customers to build great solutions. As standards emerge, we evaluate them to see which standards might best serve our customers' needs.""
+          |"Microsoft is committed to implementing the Internet standards that make sense to allow our customers to build great solutions. As standards emerge, we evaluate them to see which standards might best serve our customers' needs."
 
         aside
           |Someone forgot what the word standars means
@@ -128,32 +128,87 @@ html
           |Supporting multiple versions of IE became even more of a pain.
           |Not just IE vs Netscape but IE6 vs IE7 vs IE8 vs Nestscape 
 
-
-
       section
-        h2 Manifesto stuff
-        p . The Manifesto sets out a vision of the Internet as a piece of infrastructure that is open, a
-          !ccessible and enriches the lives of individual human beings. I
-        p https://blog.lizardwrangler.com/2007/02/13/introducing-the-mozilla-manifesto/
-        p This came about in 2007
-        p what happened that lead us here
+        h2.bullets To Be Fair
+        ul
+          li W3C slow... lumbering
+          li IE pushed forward Technologies (CSS) and more...
+          li XMLHttpRequest was Proprietary but Became an Open Standards
+          li ^ responsible for Ajax, Web 2.0 .. why we have nice things.
 
-      section
-        h2 Why Are Open Standards Critical For The Open Web
-          p Its the only non-proprietarty platform. No one owns it.
-          p Write once run over.
-          p standards == higher change it will run in the future.
-          p fragmentation is not an issue
+        aside
+          |When microsoft innovated - they did it in a way outside of the standards process. And used
+          |innovation to develop market share not to push the web forward. Remember designed for IE
 
-      section
-        h2 Something About The Late 90s 
-          p IE4 & Netscape
-          p Best viewed in
-          p Proprietary feateures = build a version for each browser
-          p 
+      section.giffy(style="background-image: url(/images/youre_awesome_carl_sagan.gif)")
 
+      section 
+        h2 Back To Early 2000s
+
+      section.giffy-fit(style="background-image: url(/images/ben-vogue.jpg)")
+
+      section.giffy-fit(style="background-image: url(/images/ben-tired-1.jpg)")    
+      
       section
-        h2 After 
+        h2 Presentation Stuff I need to finish
+        p wrap up mid 2000s quickly..maybe rework to be less browser history
+        p insert stuff about webkit - safari and Chrome
+        p what happens with web standards.. for example html5 webrtc emphatic
+        p mention mobile. 
+
+      //- section 
+      //-   h2.bullets A Lot Changes Quickly 2004 - 2010
+      //-   ul
+      //-     li Microsoft offers little
+      //-     li Firefox innovates and gains market share
+      //-     li Microsoft under pressure from consumers and industry changes course.
+      //-     li Chrome Appears with webkit
+
+
+      //-   ul
+      //-     li You should know our history.
+      //-     li Important points! Commits to following W3C standards
+      //-     li Browser War #2
+      //-     li Everyone hates microsoft.
+      //-     li Firefox has tabs
+      //-     li MS had dominant markets share - does nothing from 2001 (IE6) - 2006 (IE7)
+
+
+
+
+
+
+            
+
+
+
+
+
+
+      //- section
+      //-   h2 Manifesto stuff
+      //-   p . The Manifesto sets out a vision of the Internet as a piece of infrastructure that is open, a
+      //-     !ccessible and enriches the lives of individual human beings. I
+      //-   p https://blog.lizardwrangler.com/2007/02/13/introducing-the-mozilla-manifesto/
+      //-   p This came about in 2007
+      //-   p what happened that lead us here
+
+      //- section
+      //-   h2 Why Are Open Standards Critical For The Open Web
+      //-     p Its the only non-proprietarty platform. No one owns it.
+      //-     p Write once run over.
+      //-     p standards == higher change it will run in the future.
+      //-     p fragmentation is not an issue
+
+      //- section
+      //-   h2 Something About The Late 90s 
+      //-     p IE4 & Netscape
+      //-     p Best viewed in
+      //-     p Proprietary feateures = build a version for each browser
+      //-     p 
+
+      //- section
+      //-   h2 After 
 
 
 
