--- a/src/index.jade
+++ b/src/index.jade
@@ -16,7 +16,7 @@ html
 
     article
       //.giffy(style="background-image: url(/images/yogscast.gif)")
-      section.giffy(style="background-image: url(/images/7mkU7FK.gif)")
+      section.giffy(style="background-image: url(images/7mkU7FK.gif)")
         h1 Open Web Technologies:<br> A History & Introduction
 
       section
@@ -24,15 +24,15 @@ html
         h3 Presented By:
           hr
           p
-            img(src='/images/bensternthal.jpg', height='100') 
+            img(src='images/bensternthal.jpg', height='100') 
             <br>
             |Benjamin Sternthal @bensternthal - History
           p
-            img(src='/images/Craig-Cook.jpg', height='100') 
+            img(src='images/Craig-Cook.jpg', height='100') 
             <br>            
             |Craig Cook @craigcook - {Insert Summary}
           p
-            img(src='/images/billwalker.jpg', height='100') 
+            img(src='images/billwalker.jpg', height='100') 
             <br>              
             |Bill Walker @wfwalker - {Insert Summary}
         aside
@@ -43,7 +43,7 @@ html
             |Setup next slide.. do whatever you need to do to stay awake    
 
   
-      section.giffy(style="background-image: url(/images/glue.gif)")
+      section.giffy(style="background-image: url(images/glue.gif)")
 
       section
         h2.bullet This Is A Brief History
@@ -52,12 +52,12 @@ html
           li and 
           li ... how the battle fought on the desktop is now being fought on our phones.
 
-      section.giffy(style="background-image: url(/images/manifesto.png)")
+      section.giffy(style="background-image: url(images/manifesto.png)")
 
       section
           h2 Out Story Begins On 8/19/91
 
-      section.giffy(style="background-image: url(/images/Tim-Berners-Lee.png)")
+      section.giffy(style="background-image: url(images/Tim-Berners-Lee.png)")
         strong      
           |This project is experimental and of course comes without any warranty  
           |whatsoever. However, it could start a revolution in information access. We are  
@@ -105,7 +105,7 @@ html
       section
           h2 Let's Talk About Microsoft    
           
-      section.giffy-fit(style="background-image: url(/images/ie.gif)")
+      section.giffy-fit(style="background-image: url(images/ie.gif)")
 
       section 
         h2 IE Goes Rogue
@@ -114,7 +114,7 @@ html
         aside
           |IE bundles a ton of Proprietary features, ignores W3c recommendations. 
 
-      section.giffy(style="background-image: url(/images/yogscast.gif)")
+      section.giffy(style="background-image: url(images/yogscast.gif)")
         h2 The Web Breaks
         p.quote 
           |"Microsoft is committed to implementing the Internet standards that make sense to allow our customers to build great solutions. As standards emerge, we evaluate them to see which standards might best serve our customers' needs."
@@ -140,14 +140,14 @@ html
           |When microsoft innovated - they did it in a way outside of the standards process. And used
           |innovation to develop market share not to push the web forward. Remember designed for IE
 
-      section.giffy(style="background-image: url(/images/youre_awesome_carl_sagan.gif)")
+      section.giffy(style="background-image: url(images/youre_awesome_carl_sagan.gif)")
 
       section 
         h2 Back To Early 2000s
 
-      section.giffy-fit(style="background-image: url(/images/ben-vogue.jpg)")
+      section.giffy-fit(style="background-image: url(images/ben-vogue.jpg)")
 
-      section.giffy-fit(style="background-image: url(/images/ben-tired-1.jpg)")    
+      section.giffy-fit(style="background-image: url(images/ben-tired-1.jpg)")    
       
       section
         h2 Presentation Stuff I need to finish
