--- a/src/index.jade
+++ b/src/index.jade
@@ -53,11 +53,12 @@ html
           li ... how the battle fought on the desktop is now being fought on our phones.
 
       section.giffy(style="background-image: url(images/manifesto.png)")
-
-      section
-          h2 Out Story Begins On 8/19/91
+        aside
+          |We can talk about tcp ip etc
+          
 
       section.giffy(style="background-image: url(images/Tim-Berners-Lee.png)")
+        h2 Out Story Begins On 8/19/91
         strong      
           |This project is experimental and of course comes without any warranty  
           |whatsoever. However, it could start a revolution in information access. We are  
@@ -74,41 +75,53 @@ html
           | Layering of open standards on existing open standards.
 
       section
-          h2.bullet Things Moved Fast
-          ul
-            li 
-              strong 1993 
-              ul
-                li CERN agrees to allow anyone to use Web protocol and code royalty-free.
-                li NCSA release first alpha version of Marc Andreessen's "Mosaic for X"
-                li WWW (Port 80 HTTP) traffic measures 0.1% of NSF backbone traffic. 
-            li 
-              strong 1994
-              ul
-                li Marc Andreessen and colleagues leave NCSA to form "Mosaic Communications Corp" (later Netscape).
-                li World Wide Web Consortium founded. 
-            li
-              strong 1997
-              ul
-                li W3C publishes first W3C Recommendation for HTML — HTML 3.2.
-                li IE 4 Released (Bundled With Windows)
-                li Browser Wars
+        h2.bullet Things Moved Fast
+        ul
+          li 
+            strong 1993 
+            ul
+              li CERN agrees to allow anyone to use Web protocol and code royalty-free.
+              li NCSA release first alpha version of Marc Andreessen's "Mosaic for X"
+              li WWW (Port 80 HTTP) traffic measures 0.1% of NSF backbone traffic. 
+          li 
+            strong 1994
+            ul
+              li Marc Andreessen and colleagues leave NCSA to form "Mosaic Communications Corp" (later Netscape).
+              li World Wide Web Consortium founded. 
+          li
+            strong 1997
+            ul
+              li W3C publishes first W3C Recommendation for HTML — HTML 3.2.
+              li IE 4 Released (Bundled With Windows)
+              li Browser Wars
+          li 
+            strong 1998
+            ul
+              li Web Standards Project - Established to push agenda of standards
 
-          aside
-            |W3C founded to lead the World Wide Web to its full potential by developing protocols and 
-            |guidelines that ensure the long-term growth of the Web.             
-            <br>
-            |Note w3c does not publish strict standards but rather strong recommendations.
-            |IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
-            |at IE and dominating the market.
+ 
+      section
+        h2 W3C & Web Standards  
+        ul
+          li Standards Organization... Publishes 'strong' recommendations.
+          li Tries To Get Vendors To Agree
+        aside
+          |W3C founded to lead the World Wide Web to its full potential by developing protocols and 
+          |guidelines that ensure the long-term growth of the Web.             
+          <br>
+          |Note w3c does not publish strict standards but rather strong recommendations.
+          |IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
+          |at IE and dominating the market. Even though we had an establised method for evolving standards
+          |ms went there own way.
+
 
       section
-          h2 Let's Talk About Microsoft    
+          h2 Case Study: Let's Talk About Microsoft    
           
       section.giffy-fit(style="background-image: url(images/ie.gif)")
 
       section 
-        h2 IE Goes Rogue
+        h2 IE: When You Don't Follow A Standard
         <br>
         img(src='/images/border-box-model.png') 
         aside
@@ -129,7 +142,7 @@ html
           |Not just IE vs Netscape but IE6 vs IE7 vs IE8 vs Nestscape 
 
       section
-        h2.bullets To Be Fair
+        h2.bullets To Be Fair... Microsoft Was Not Insane
         ul
           li W3C slow... lumbering
           li IE pushed forward Technologies (CSS) and more...
@@ -143,18 +156,56 @@ html
       section.giffy(style="background-image: url(images/youre_awesome_carl_sagan.gif)")
 
       section 
-        h2 Back To Early 2000s
+        h2 Back To Standards
+        p 2000s IE Loses Popularity - Fragmentation Drives Standards Adoption
+        p Writing specific code for 4 browsers sucks
 
       section.giffy-fit(style="background-image: url(images/ben-vogue.jpg)")
 
       section.giffy-fit(style="background-image: url(images/ben-tired-1.jpg)")    
       
       section
-        h2 Presentation Stuff I need to finish
-        p wrap up mid 2000s quickly..maybe rework to be less browser history
-        p insert stuff about webkit - safari and Chrome
-        p what happens with web standards.. for example html5 webrtc emphatic
-        p mention mobile. 
+        h2.bullets HTML & CSS
+        ul
+          li By the late 2000's Wide Adoption of Standars Across All Browsers
+          li Developers happy
+          li Oh yeah.. and Mozilla published a manifesto
+          li HTML5 - 'application' type features
+
+      section
+        h2.bullets Standards Are Slow
+        ul
+          li Working Draft
+          li Candidate Recommendation
+          li Proposed Recommendation
+          li W3C Recommendation
+          li But They Work - XMLHttpRequest & WebRTC
+        
+        aside HTML5 'Started' in 2008, Stable Recommendation Expected 2014! folks move ahead anyway WebRTC is a draft but already implemented.
+
+      section
+        h2 So We Have A Process That Works On Desktop Browsers
+        p Vendors are happy, developers are happy, innovation continues. But....
+
+
+      section.giffy(style="background-image: url(images/AFP_Getty-60669433.jpg)")    
+        h2 Can I Install Firefox On This Thing?
+
+      section
+        h2.bullets Mobile Changed Everythign
+        ul
+          li The Walls Went Back Up But This Time They Were higher
+          li Apple & Google Were Gatekeepers
+          li The Web Was Second Class To Proprietary Apps
+          li Our manifesto in doubt!
+
+      section
+        h2.bullets Hope
+          ul
+            li mobile stuff goes here and transfer to craig
+
+
+
 
       //- section 
       //-   h2.bullets A Lot Changes Quickly 2004 - 2010
