--- a/src/index.jade
+++ b/src/index.jade
@@ -123,7 +123,7 @@ html
       section 
         h2 IE: When You Don't Follow A Standard
         <br>
-        img(src='/images/border-box-model.png') 
+        img(src='images/border-box-model.png') 
         aside
           |IE bundles a ton of Proprietary features, ignores W3c recommendations. 
 
