--- a/src/index.jade
+++ b/src/index.jade
@@ -67,6 +67,7 @@ html
           |available, as part of a truly world-wide web. 
 
         aside
+          |COVER THE BIRTH OF STANDARDS
           |Tim-Berners-Lee original post to usenet announcing public release of WorldWideWeb hypertext browser/editor.
           |Even here you can see the seeds of collaboration.
           <br>
@@ -103,8 +104,11 @@ html
       section
         h2 W3C & Web Standards  
         ul
-          li Standards Organization... Publishes 'strong' recommendations.
+          li What Is W3C: Standards Organization... Publishes 'strong' recommendations.
+          li What Is A Standard?
+          li What Is The Scope Of Their Work
           li Tries To Get Vendors To Agree
+          li Standards Making Is Slow Process...
         aside
           |W3C founded to lead the World Wide Web to its full potential by developing protocols and 
           |guidelines that ensure the long-term growth of the Web.             
@@ -116,19 +120,19 @@ html
 
 
       section
-          h2 Case Study: Let's Talk About Microsoft    
+          h2 Case Study: Let's Talk About Microsoft In The Late 90's and Early 2000's 
           
       section.giffy-fit(style="background-image: url(images/ie.gif)")
 
       section 
-        h2 IE: When You Don't Follow A Standard
+        h2 IE: Didn't Like To Follow Standards
         <br>
         img(src='images/border-box-model.png') 
         aside
           |IE bundles a ton of Proprietary features, ignores W3c recommendations. 
 
       section.giffy(style="background-image: url(images/yogscast.gif)")
-        h2 The Web Breaks
+        h2 Creates A Nightmare For Developers
         p.quote 
           |"Microsoft is committed to implementing the Internet standards that make sense to allow our customers to build great solutions. As standards emerge, we evaluate them to see which standards might best serve our customers' needs."
 
@@ -160,14 +164,14 @@ html
         p 2000s IE Loses Popularity - Fragmentation Drives Standards Adoption
         p Writing specific code for 4 browsers sucks
 
-      section.giffy-fit(style="background-image: url(images/ben-vogue.jpg)")
+      //- section.giffy-fit(style="background-image: url(images/ben-vogue.jpg)")
 
-      section.giffy-fit(style="background-image: url(images/ben-tired-1.jpg)")    
+      //- section.giffy-fit(style="background-image: url(images/ben-tired-1.jpg)")    
       
       section
         h2.bullets HTML & CSS
         ul
-          li By the late 2000's Wide Adoption of Standars Across All Browsers
+          li By the late 2000's Wide Adoption of Standards Across All Browsers
           li Developers happy
           li Oh yeah.. and Mozilla published a manifesto
           li HTML5 - 'application' type features
@@ -184,7 +188,7 @@ html
         aside HTML5 'Started' in 2008, Stable Recommendation Expected 2014! folks move ahead anyway WebRTC is a draft but already implemented.
 
       section
-        h2 So We Have A Process That Works On Desktop Browsers
+        h2 After 20 Years So We Have A Process That Works On Desktop Browsers
         p Vendors are happy, developers are happy, innovation continues. But....
 
 
@@ -192,17 +196,20 @@ html
         h2 Can I Install Firefox On This Thing?
 
       section
-        h2.bullets Mobile Changed Everythign
+        h2.bullets Mobile Changed Everything
         ul
           li The Walls Went Back Up But This Time They Were higher
           li Apple & Google Were Gatekeepers
           li The Web Was Second Class To Proprietary Apps
           li Our manifesto in doubt!
+          li How Can Their Be An Open Web In This Environment?
 
-      section
-        h2.bullets Hope
-          ul
-            li mobile stuff goes here and transfer to craig
+      section.giffy(style="background-image: url(images/Firefox-OS-with-Fox.jpg)")    
+        h2.bullets A Mobile OS Built On Standards & 'Most Importantly Built In The Standards Way.
+        ul
+          li mobile stuff goes here and transfer to craig
+
+        aside Break out about developing in the open etc. This may be really important
 
 
 
