--- a/src/index.jade
+++ b/src/index.jade
@@ -76,7 +76,7 @@ html
           | Layering of open standards on existing open standards.
 
       section
-        h2.bullet Things Moved Fast
+        h2.bullet After That Things Moved Quickly
         ul
           li 
             strong 1993 
@@ -111,8 +111,10 @@ html
           li Standards Making Is Slow Process...
         aside
           |W3C founded to lead the World Wide Web to its full potential by developing protocols and 
-          |guidelines that ensure the long-term growth of the Web.             
+          |guidelines that ensure the long-term growth of the Web. Without it the web would have been driven
+          | by whomever had the most market share.            
           <br>
+          |W3C {EXPLAIN STANDARDS HERE AND SCOPE}
           |Note w3c does not publish strict standards but rather strong recommendations.
           |IE rapidly overtook netscape in market penetration. 1st browser war saw ms throwing money
           |at IE and dominating the market. Even though we had an establised method for evolving standards
@@ -137,7 +139,7 @@ html
           |"Microsoft is committed to implementing the Internet standards that make sense to allow our customers to build great solutions. As standards emerge, we evaluate them to see which standards might best serve our customers' needs."
 
         aside
-          |Someone forgot what the word standars means
+          |Someone forgot what the word standard means
           <br>
           |Developing cross-browser websites was incredibly painful.
           |The promise of write once run everywhere failed. You had to code for ie and everybody else
@@ -195,10 +197,13 @@ html
       section.giffy(style="background-image: url(images/AFP_Getty-60669433.jpg)")    
         h2 Can I Install Firefox On This Thing?
 
+      section.giffy-fit(style="background-image: url(images/its_classified_barack_obama.gif)")    
+
+
       section
         h2.bullets Mobile Changed Everything
         ul
-          li The Walls Went Back Up But This Time They Were higher
+          li The Walls Went Up
           li Apple & Google Were Gatekeepers
           li The Web Was Second Class To Proprietary Apps
           li Our manifesto in doubt!
